[package]
authors = ["serbe <serbenv@gmail.com>"]
description = "Rust SOCKS client library"
edition = "2021"
name = "rscl"
version = "0.1.1"
readme = "README.md"
repository = "https://github.com/serbe/rscl/"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
tokio = {version = "1", features = ["net", "io-util"]}
url = "2.3"

[dev-dependencies]
tokio = {version = "1", features = ["full"]}
